# environmental_data_api

./: .gitignore  Dockerfile  README.md  pyproject.toml
data_transformer/: data_downloader.py  data_loader.py  data_processor.py  main.py  models.py  routes.py
