[tool.poetry]
name = "irysan-data-transformer"
version = "1.0.0"
description = "Data transformer for IRYSAN task"
authors = ["Christian <hk.radev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "data_transformer" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pandas = "^2.2.3"
netcdf4 = "^1.7.1.post2"
uvicorn = "^0.31.1"
tqdm = "^4.66.5"
fastapi-msgspec = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
